complete project and documentation.

--- a/src/dapp/index.html
+++ b/src/dapp/index.html
@@ -1,33 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <head>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
     <title>FlightSurety</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  </head>
 
-<body>
-
+  <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">FlightSurety</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+      <a class="navbar-brand" href="#">FlightSurety</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarsExampleDefault"
+        aria-controls="navbarsExampleDefault"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
     </nav>
 
     <main class="container">
-
-        <div id="display-wrapper" class="top-20">
-        </div>
-        <div class="row top-20">
-            <label class="form">Flight</label> <input type="text" id="flight-number"> <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
-        </div>
+      <div id="display-wrapper" class="top-20"></div>
+      <div class="row top-20">
+        <label class="form">Flight</label>
+        <input type="text" id="flight-number" value="AB1234" />
+        <btn class="btn btn-primary" id="submit-oracle">Submit to Oracles</btn>
+      </div>
+      <div class="row top-20">
+        <label class="form">Airline</label>
+        Address
+        <input
+          type="text"
+          id="airline-addr"
+          value="0xf17f52151EbEF6C7334FAD080c5704D77216b732"
+        />
+        Amount
+        <input type="text" id="airline-fund" value="10" />
+        <btn class="btn btn-primary" id="fund-airline">Fund Airline</btn>
+      </div>
+      <div class="row top-20">
+        <label class="form">Insurance</label> Premium
+        <input type="text" id="insur-amt" value="0.5" />
+        <btn class="btn btn-primary" id="insur-buy">Purchase</btn>
+        <btn class="btn btn-primary" id="insur-withdraw">Withdraw Payout</btn>
+      </div>
     </main>
-
-</body>
-
+  </body>
 </html>
